--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+filterwarnings =
+    ignore::UserWarning
+    ignore:The event_loop fixture provided by pytest-asyncio has been redefined in
+log_level = INFO
